<resources>
    <string name="app_name">Notify</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="tel">Mobile Phone Number</string>
    <string name="comfirmPassword">Comfirm Password</string>
    <string name="register">Register</string>
    <string name="signinBTN">Sign In</string>
    <string name="title_activity_show_item">showItem</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_label_name">ชื่อ : </string>
    <string name="item_label_amount">จำนวน : </string>
    <string name="item_label_member">เจ้าของ : </string>
    <string name="item_label_date">วันหมดอายุ : </string>
    <string name="editBtn">Edit Your Item</string>
    <string name="deleteBtn">Delete Your Item</string>
    <string name="pictureLabel">Picture</string>
    <string name="sign_out">Sign Out</string>
    <string name="history">History</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">ชื่อสิ่งของ</string>
    <string name="item_amount">จำนวน</string>
    <string name="item_expire">วันหมดอายุ</string>
    <string name="notify">แจ้งเตือนวันที่</string>
    <string name="image">กรุณาเลือกรูปภาพ</string>
    <string name="users">ชื่อคนลงทะเบียน</string>
    <string name="add_item_button">เพิ่ม</string>
    <string name="image_view">รูปของคุณ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_item">EditItem</string>
</resources>
