<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="118dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            app:srcCompat="@color/colorAccent"
            android:contentDescription="@string/pictureLabel" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView3"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/item_label_name" />

        <TextView
            android:id="@+id/data_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_name"
            android:layout_alignBottom="@+id/label_name"
            android:layout_toEndOf="@+id/label_name"
            android:text="name" />

        <TextView
            android:id="@+id/label_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignStart="@+id/label_name"
            android:layout_below="@+id/label_name"
            android:layout_marginTop="9dp"
            android:text="@string/item_label_amount" />

        <TextView
            android:id="@+id/data_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_amount"
            android:layout_alignBottom="@+id/label_amount"
            android:layout_toEndOf="@+id/label_amount"
            android:text="amount" />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_amount"
            android:layout_below="@+id/label_amount"
            android:layout_marginTop="9dp"
            android:text="@string/item_label_date" />

        <TextView
            android:id="@+id/data_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_date"
            android:layout_toEndOf="@+id/label_date"
            android:text="date" />

        <TextView
            android:id="@+id/label_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/label_date"
            android:layout_below="@+id/label_date"
            android:layout_marginTop="9dp"
            android:text="@string/item_label_member" />

        <TextView
            android:id="@+id/data_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_member"
            android:layout_alignBottom="@+id/label_member"
            android:layout_toEndOf="@+id/label_member"
            android:text="member" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/editBtn"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageButton2"
            android:layout_alignParentTop="true"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/deleteBtn"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>